--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="home"
+        android:id="@+id/home"
         android:icon="@drawable/home"
         android:title="Home"/>
     <item
-        android:id="filemusic"
+        android:id="@+id/filemusic"
         android:icon="@drawable/music"
         android:title="File Musis"/>
     <item
-        android:id="sync"
+        android:id="@+id/sync"
         android:icon="@drawable/sync"
         android:title="Sync"/>
     <item
-        android:id="trash"
+        android:id="@+id/trash"
         android:icon="@drawable/delete"
         android:title="Trash"/>
     <item
-        android:id="settings"
+        android:id="@+id/settings"
         android:icon="@drawable/setting"
         android:title="Settings"/>
     <item android:title="Profile">
         <menu>
             <item
-                android:id="login"
+                android:id="@+id/login"
                 android:title="Login"
                 android:icon="@drawable/login"/>
         </menu>
@@ -31,11 +31,11 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="share"
+                android:id="@+id/share"
                 android:title="Share"
                 android:icon="@drawable/share"/>
             <item
-                android:id="rateus"
+                android:id="@+id/rateus"
                 android:title="Rate US"
                 android:icon="@drawable/rate"/>
         </menu>
